--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -29,6 +29,8 @@
 /* Component styles */
 @import "components/attendance-slider";
 @import "components/date-navigation";
+@import "components/filter-sidebar--groups";
+@import "components/magic-link-btn.scss";
 @import "components/nav-top";
 @import "components/tracking-bar";
 @import "components/record-button";
@@ -43,7 +45,6 @@
 @import "components/sy-toggle";
 @import "components/progress-tooltip";
 @import "components/welcome-modal";
-@import "components/magic-link-btn.scss";
 
 html {
   hyphens: auto;
