refactor(duratio-since): to glimmer syntax

--- a/app/components/record-button/template.hbs
+++ b/app/components/record-button/template.hbs
@@ -12,7 +12,7 @@
       <FaIcon @icon="square" @prefix="fas" />
     </button>
     <div class="record-button-timer">
-      {{duration-since @activity.from}}
+      <DurationSince @from={{@activity.from}} />
     </div>
   {{else}}
     <button
