refactor(date-buttons): to glimmer syntax

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -28,6 +28,7 @@
 
 /* Component styles */
 @import "components/attendance-slider";
+@import "components/date-buttons";
 @import "components/date-navigation";
 @import "components/filter-sidebar--groups";
 @import "components/magic-link-btn.scss";
