refactor(date-buttons): to glimmer syntax

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -43,6 +43,7 @@
 @import "components/sy-toggle";
 @import "components/progress-tooltip";
 @import "components/welcome-modal";
+@import "components/date-buttons";
 
 html {
   hyphens: auto;
