--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -31,6 +31,7 @@
 @import "components/date-buttons";
 @import "components/date-navigation";
 @import "components/filter-sidebar--group";
+@import "components/filter-sidebar--label";
 @import "components/loading-icon";
 @import "components/nav-top";
 @import "components/tracking-bar";
