--- a/app/components/paginated-table/template.hbs
+++ b/app/components/paginated-table/template.hbs
@@ -1,6 +1,8 @@
-{{yield (hash
+<table class="table table--striped table--hover">
+  {{yield (hash
   head = (component 'paginated-table/head')
   body = (component 'paginated-table/body')
   foot = (component 'paginated-table/foot')
-)}}
-{{yield to='inverse'}}
+  )}}
+  {{yield to='inverse'}}
+</table>
