--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -43,6 +43,7 @@
 @import "components/sy-toggle";
 @import "components/progress-tooltip";
 @import "components/welcome-modal";
+@import "components/paginated-table--foot";
 @import "components/filter-sidebar--label";
 @import "components/filter-sidebar--group";
 @import "components/date-buttons";
