refactor: write cleaner code for bar chart colors

--- a/app/components/statistic-list/bar/template.hbs
+++ b/app/components/statistic-list/bar/template.hbs
@@ -2,10 +2,7 @@
 
   <div
     ...attributes
-    class="statistic-list-bar
-    {{if this.didFinishEffortsInBudget 'strong-success'}}
-    {{if this.didFinishEffortsOverBudget 'strong-danger'}}
-    "
+    class="statistic-list-bar {{ this.spentEffortsBarColor }}"
     {{style --value=(concat @value)}}
   ></div>
   {{#if (and @remaining (lte @remaining 1))}}
