fix: add glimming to the checked boxes in analysis & timesheet

--- a/app/styles/analysis.scss
+++ b/app/styles/analysis.scss
@@ -77,3 +77,6 @@
 .table--analysis tr.selected td {
   border-color: lighten($color-primary, 20%) !important;
 }
+.blue-checked {
+  color: darken($color-primary, 10);
+}
