fix: the bar is green only if the task is archived and have no remeaning

--- a/app/components/statistic-list/template.hbs
+++ b/app/components/statistic-list/template.hbs
@@ -80,6 +80,7 @@
                   @value={{div row.duration this.maxDuration}}
                   @remaining={{div allotted this.maxDuration}}
                   @goal={{div row.estimatedTime this.maxDuration}}
+                  @archived={{row.archived}}
                 />
               {{/let}}
             {{/let}}
