--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -57,9 +57,9 @@
                 {{/if}}
               </td>
               <td>
-                <div><SyCheckmark @checked={{activity.review}} />
+                <div><SyCheckmark @checked={{activity.review}} @highlight={{true}} />
                   Needs review</div>
-                <div><SyCheckmark @checked={{activity.notBillable}} />
+                <div><SyCheckmark @checked={{activity.notBillable}} @highlight={{true}} />
                   Not billable</div>
               </td>
               <td>
