--- a/app/components/sy-checkmark/template.hbs
+++ b/app/components/sy-checkmark/template.hbs
@@ -1,1 +1,1 @@
-<FaIcon class="{{if @checked "blue-checked"}}" ...attributes @icon={{this.icon}} />
+<FaIcon class="{{if (and @highlight @checked) "highlight"}}" ...attributes @icon={{this.icon}} />
