fix: add glimming to the checked boxes in analysis & timesheet (#919)
* fix: add glimming to the checked boxes in analysis & timesheet

* fix(sy-checkmark): change highlight class name with it tests

--- a/app/components/sy-checkmark/template.hbs
+++ b/app/components/sy-checkmark/template.hbs
@@ -1,1 +1,1 @@
-<FaIcon ...attributes @icon={{this.icon}} />
+<FaIcon class="{{if (and @highlight @checked) "highlight"}}" ...attributes @icon={{this.icon}} />
