--- a/app/styles/analysis.scss
+++ b/app/styles/analysis.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 .table--analysis {
   margin-bottom: 0;
   table-layout: fixed;
@@ -76,4 +78,7 @@
 .table--analysis tr.selected + tr td,
 .table--analysis tr.selected td {
   border-color: lighten($color-primary, 20%) !important;
+}
+.highlight {
+  color: color.adjust($color-primary, $lightness: -10%);
 }
