--- a/app/styles/login.scss
+++ b/app/styles/login.scss
@@ -1,5 +1,11 @@
 .login {
   text-align: center;
+
+  h1 {
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+  }
+
   .timed-clock {
     margin: 0 auto;
   }
