refactor(timed-clock): glimmerify component and increase clock size in login page

--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,9 +1,9 @@
 <div class="login">
-  <h1>Timed Login</h1>
-  <hr>
-  <TimedClock />
-  <br>
+  <h1>Welcome to Timed</h1>
+  <hr />
+  <TimedClock @clockSize={{120}} />
+  <br />
   <LinkTo @route="sso-login" class="btn btn-primary">
-    Login with SSO
+    Login via SSO
   </LinkTo>
 </div>
