--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -48,6 +48,7 @@
 @import "components/sy-modal--footer";
 @import "components/sy-modal--overlay";
 @import "components/sy-toggle";
+@import "components/timed-clock";
 @import "components/tracking-bar";
 @import "components/weekly-overview";
 @import "components/weekly-overview-benchmark";
