--- a/app/components/timed-clock/template.hbs
+++ b/app/components/timed-clock/template.hbs
@@ -1,11 +1,12 @@
-<svg viewBox="0 0 512 512" width="100%" height="100%">
-  <circle
-    class="circle"
-    r="240"
-    cx="256"
-    cy="256"
-    stroke-width="20"
-  />
+<svg
+  class="timed-clock"
+  viewBox="0 0 512 512"
+  width="100%"
+  height="100%"
+  {{style --clock-size=(concat (or @clockSize 50) "px")}}
+  {{did-insert (perform this.timer)}}
+>
+  <circle class="circle" r="240" cx="256" cy="256" stroke-width="20" />
   <line
     class="hour"
     x1="256"
