--- a/app/styles/login.scss
+++ b/app/styles/login.scss
@@ -2,11 +2,17 @@
   text-align: center;
 
   h1 {
-    margin-top: 0.5rem;
-    margin-bottom: 0;
+    margin-top: 0.8rem;
   }
 
   .timed-clock {
-    margin: 0 auto;
+    margin: 0 auto 0.5rem;
+  }
+
+  @media only screen and (max-width: 768px) {
+    .btn-primary {
+      margin-left: 0.5rem;
+      margin-right: 0.5rem;
+    }
   }
 }
