refactor(balance-donut): to glimmer sytax

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -28,6 +28,7 @@
 
 /* Component styles */
 @import "components/attendance-slider";
+@import "components/balance-donut";
 @import "components/date-buttons";
 @import "components/date-navigation";
 @import "components/filter-sidebar--group";
