refactor(balance-donut): to glimmer sytax

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -47,6 +47,7 @@
 @import "components/filter-sidebar--label";
 @import "components/filter-sidebar--group";
 @import "components/date-buttons";
+@import "components/balance-donut";
 
 html {
   hyphens: auto;
