refactor(timed-clock): to glimmer syntax

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -48,6 +48,7 @@
 @import "components/filter-sidebar--group";
 @import "components/date-buttons";
 @import "components/balance-donut";
+@import "components/timed-clock";
 
 html {
   hyphens: auto;
