--- a/app/components/timed-clock/template.hbs
+++ b/app/components/timed-clock/template.hbs
@@ -1,4 +1,5 @@
-<svg viewBox="0 0 512 512" width="100%" height="100%">
+<div class="timed-clock">
+ <svg viewBox="0 0 512 512" width="100%" height="100%">
   <circle
     class="circle"
     r="240"
@@ -37,3 +38,4 @@
     transform="rotate({{this.second}} 256 256)"
   />
 </svg>
+</div>
