refactor(weekly-overview-benchmark): to glimmer syntax

--- a/app/components/weekly-overview-benchmark/template.hbs
+++ b/app/components/weekly-overview-benchmark/template.hbs
@@ -1,2 +1,6 @@
-{{#if this.showLabel}}<span style={{this.style}}>{{this.hours}}h</span>{{/if}}
-<hr style={{this.style}}>
+<div class="weekly-overview-benchmark {{if @expected "expected"}}">
+  {{#if @showLabel}}
+    <span {{style this.style}}>{{this.hours}}h</span>
+  {{/if}}
+  <hr {{style this.style}}>
+</div>
