--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -50,6 +50,7 @@
 @import "components/sy-toggle";
 @import "components/tracking-bar";
 @import "components/weekly-overview";
+@import "components/weekly-overview-benchmark";
 @import "components/welcome-modal";
 
 html {
