refactor(weekly-overview-benchmark): to glimmer syntax

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -49,6 +49,7 @@
 @import "components/sy-toggle";
 @import "components/tracking-bar";
 @import "components/weekly-overview";
+@import "components/weekly-overview-benchmark";
 @import "components/welcome-modal";
 
 html {
