refactor(weekly-overview): to glimmer syntax

--- a/app/components/weekly-overview/template.hbs
+++ b/app/components/weekly-overview/template.hbs
@@ -1,15 +1,17 @@
-<div class="weekly-overview">
-  <WeeklyOverviewBenchmark @showLabel={{ true }} @hours={{ 20 }} />
-  <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 18 }} />
-  <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 16 }} />
-  <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 14 }} />
-  <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 12 }} />
-  <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 10 }} />
-  <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 8 }} />
-  <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 6 }} />
-  <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 4 }} />
-  <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 2 }} />
-  <WeeklyOverviewBenchmark @showLabel={{ true }} @hours={{ 0 }} />
-  <WeeklyOverviewBenchmark @showLabel={{ true }} @hours={{ this.hours }} @expected={{ true }} />
-  {{yield}}
+<div {{style this.style}} class="weekly-overview">
+  <div class="weekly-overview-children">
+    <WeeklyOverviewBenchmark @showLabel={{ true }} @hours={{ 20 }} />
+    <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 18 }} />
+    <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 16 }} />
+    <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 14 }} />
+    <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 12 }} />
+    <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 10 }} />
+    <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 8 }} />
+    <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 6 }} />
+    <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 4 }} />
+    <WeeklyOverviewBenchmark @showLabel={{ false }} @hours={{ 2 }} />
+    <WeeklyOverviewBenchmark @showLabel={{ true }} @hours={{ 0 }} />
+    <WeeklyOverviewBenchmark @showLabel={{ true }} @hours={{ this.hours }} @expected={{ true }} />
+    {{yield}}
+  </div>
 </div>
