refactor(weekly-overview): to glimmer syntax

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -48,6 +48,7 @@
 @import "components/sy-modal--overlay";
 @import "components/sy-toggle";
 @import "components/tracking-bar";
+@import "components/weekly-overview";
 @import "components/welcome-modal";
 
 html {
