fix: weekly overview benchmark tests

--- a/app/components/weekly-overview-benchmark/template.hbs
+++ b/app/components/weekly-overview-benchmark/template.hbs
@@ -1,6 +1,6 @@
 <div class="weekly-overview-benchmark {{if @expected "expected"}}">
   {{#if @showLabel}}
-    <span {{style this.style}}>{{this.hours}}h</span>
+    <span {{style this.style}}>{{@hours}}h</span>
   {{/if}}
   <hr {{style this.style}}>
 </div>
