--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -51,6 +51,7 @@
 @import "components/tracking-bar";
 @import "components/weekly-overview";
 @import "components/weekly-overview-benchmark";
+@import "components/weekly-overview-day";
 @import "components/welcome-modal";
 
 html {
