refactor(weekly-overview-day): to glimmer syntax

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -50,6 +50,7 @@
 @import "components/balance-donut";
 @import "components/weekly-overview";
 @import "components/weekly-overview-benchmark";
+@import "components/weekly-overview-day";
 
 html {
   hyphens: auto;
