fix(weekly-overview-day): use unless instead of if

--- a/app/components/weekly-overview-day/template.hbs
+++ b/app/components/weekly-overview-day/template.hbs
@@ -6,7 +6,7 @@
     {{if @active "active"}}
     {{if @absence "absence"}}
     {{if @holidy "holiday"}}
-    {{if (not @workday "weekend")}}
+    {{unless @workday "weekend"}}
   "
   ...attributes
   >
