fix: `@holiday` argument name in weekly overview day template

--- a/app/components/weekly-overview-day/template.hbs
+++ b/app/components/weekly-overview-day/template.hbs
@@ -5,7 +5,7 @@
   class="weekly-overview-day
     {{if @active "active"}}
     {{if @absence "absence"}}
-    {{if @holidy "holiday"}}
+    {{if @holiday "holiday"}}
     {{unless @workday "weekend"}}
   "
   ...attributes
