feat: login page (#915)
* feat: login page

* fix: use link-to component for routing

* fix: after logout uri in environment file

* fix: centering the clock in login page

* style(login-page): add a little margin to h1 element

* refactor(timed-clock): glimmerify component and increase clock size in login page

---------

Co-authored-by: Falk <falk.neumann@adfinis.com>

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -25,6 +25,7 @@
 @import "tour";
 @import "users-navigation";
 @import "users";
+@import "login";
 
 /* Component styles */
 @import "components/attendance-slider";
@@ -48,6 +49,7 @@
 @import "components/sy-modal--footer";
 @import "components/sy-modal--overlay";
 @import "components/sy-toggle";
+@import "components/timed-clock";
 @import "components/tracking-bar";
 @import "components/weekly-overview";
 @import "components/weekly-overview-benchmark";
