fix(task-selection): improve tracking of active activities
Formerly the task selection could come out of sync with the
tracking service. A newly added observer will make changes in
the activity tracking more transparent to the select component.

--- a/app/components/tracking-bar/template.hbs
+++ b/app/components/tracking-bar/template.hbs
@@ -36,7 +36,7 @@
           @activity={{this.tracking.activity}}
           @recording={{this.tracking.activity.active}}
           @onStart={{perform this.tracking.startActivity}}
-          @onStop={{queue (perform this.tracking.stopActivity) t.clear}}
+          @onStop={{perform this.tracking.stopActivity}}
         />
       </div>
     </form>
