feat: add magic link component to create a magic link that can be sent to another user

--- a/app/components/date-navigation/template.hbs
+++ b/app/components/date-navigation/template.hbs
@@ -1,5 +1,8 @@
 <div class="date-navigation btn-toolbar" ...attributes>
   <div class="btn-group">
+    <MagicLinkBtn />
+  </div>
+  <div class="btn-group">
     <button
       type="button"
       data-test-previous
