fix(sy-duration-picker-day): respect disabled flag

--- a/app/components/sy-durationpicker-day/template.hbs
+++ b/app/components/sy-durationpicker-day/template.hbs
@@ -4,6 +4,7 @@
   name="duration-day"
   type="text"
   class="duration-day form-control"
+  disabled={{@disabled}}
   pattern={{this.pattern}}
   value={{this.displayValue}}
   maxlength={{this.maxlength}}
