--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -39,6 +39,7 @@
 @import "components/nav-top";
 @import "components/progress-tooltip";
 @import "components/record-button";
+@import "components/scroll-container";
 @import "components/sort-header";
 @import "components/statistic-list-bar";
 @import "components/sy-calendar";
