--- a/app/analysis/index/template.hbs
+++ b/app/analysis/index/template.hbs
@@ -154,7 +154,7 @@
                   (hash label="Billable" value="0")
                   (hash label="Not billable" value="1")
                 }}
-                @onChange={{ fn this.updateParam "notBillable"}}
+                @onChange={{fn this.updateParam "notBillable"}}
               />
             </fs.label>
             <fs.label>
@@ -329,7 +329,7 @@
                 </tr>
               </thead>
             </table>
-            <EmberScrollable @class="analysis-scrollable-container">
+            <ScrollContainer class="analysis-scrollable-container">
               <table class="table table--striped table--analysis">
                 <colgroup>
                   <col />
@@ -373,10 +373,22 @@
                           report.verifiedBy
                           report.verifiedBy.username
                         }}</td>
-                      <td><SyCheckmark @checked={{report.rejected}} @highlight={{true}} /></td>
-                      <td><SyCheckmark @checked={{report.review}} @highlight={{true}} /></td>
-                      <td><SyCheckmark @checked={{report.notBillable}} @highlight={{true}} /></td>
-                      <td><SyCheckmark @checked={{report.billed}} @highlight={{true}} /></td>
+                      <td><SyCheckmark
+                          @checked={{report.rejected}}
+                          @highlight={{true}}
+                        /></td>
+                      <td><SyCheckmark
+                          @checked={{report.review}}
+                          @highlight={{true}}
+                        /></td>
+                      <td><SyCheckmark
+                          @checked={{report.notBillable}}
+                          @highlight={{true}}
+                        /></td>
+                      <td><SyCheckmark
+                          @checked={{report.billed}}
+                          @highlight={{true}}
+                        /></td>
                     </tr>
                   {{/each}}
                   {{#if this._canLoadMore}}
@@ -398,7 +410,7 @@
                   {{/if}}
                 </tbody>
               </table>
-            </EmberScrollable>
+            </ScrollContainer>
             <table class="table table--striped table--analysis">
               <colgroup>
                 <col />
