fix(analysis): rejected and verified qp updates trigger model hook

--- a/app/components/report-review-warning/template.hbs
+++ b/app/components/report-review-warning/template.hbs
@@ -5,9 +5,12 @@
         @route="analysis.index"
         @query={{hash
           fromDate=null
-          toDate=this.unverifiedReports.reportsToDate
+          toDate=(moment-format
+            this.unverifiedReports.reportsToDate "YYYY-MM-DD"
+          )
           reviewer=this.session.data.user.id
           editable=1
+          rejected=null
           verified=0
           customer=null
           project=null
@@ -15,8 +18,8 @@
           user=null
           billingType=null
           costCenter=null
-          review=""
-          notBillable=""
+          review=null
+          notBillable=null
         }}
       >
         <FaIcon @icon="exclamation-triangle" @prefix="fas" />
@@ -41,8 +44,8 @@
           reviewer=null
           billingType=null
           costCenter=null
-          review=""
-          notBillable=""
+          review=null
+          notBillable=null
         }}
       >
         <FaIcon @icon="circle-xmark" />
