feat: enforce spelling check for comment field

--- a/app/components/report-row/template.hbs
+++ b/app/components/report-row/template.hbs
@@ -27,6 +27,7 @@
         id="row-comment"
         value={{cs.comment}}
         disabled={{not this.editable}}
+        spellcheck="true"
         {{on "change" (pick "target.value" (fn (mut cs.comment)))}}
         data-test-report-comment
       />
