--- a/app/components/tracking-bar/template.hbs
+++ b/app/components/tracking-bar/template.hbs
@@ -24,6 +24,7 @@
           class="form-control"
           placeholder="Comment"
           name="comment"
+          spellcheck="true"
           @value={{this.tracking.activity.comment}}
           disabled={{this.tracking.activity.active}}
         />
