--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -32,6 +32,7 @@
           placeholder="Comment"
           name="comment"
           id="comment"
+          spellcheck="true"
           value={{this.changeset.comment}}
           {{on
             "change"
