fix(filter-sidebar): component to show the rejected options

--- a/app/analysis/index/template.hbs
+++ b/app/analysis/index/template.hbs
@@ -211,6 +211,7 @@
                 @type="button"
                 @selected={{this.rejected}}
                 @valuePath="value"
+                @labelPath="label"
                 @options={{array
                   (hash label="All" value="")
                   (hash label="Rejected" value="1")
