fix: the user info in navigation return empty string after refreshing the token

--- a/app/components/sy-topnav/template.hbs
+++ b/app/components/sy-topnav/template.hbs
@@ -61,7 +61,7 @@
       <li class="nav-top-list-item">
         <LinkTo @route="users.edit" @model={{this.session.data.user.id}}>
           <FaIcon @icon="user" />
-          {{this.session.data.user.fullName}}
+          {{this.fullName}}
         </LinkTo>
       </li>
       <li class="nav-top-list-item">
